# idanpow

./: README.md  docker-compose.yml  manage.py  pyproject.toml  test.http
api/: .env.example  gunicorn.conf.py  manage.py
api/idanpow/: asgi.py  settings.py  urls.py  wsgi.py
api/nppow/: models.py  serializers.py  views.py
api/nppow/services/: __init__.py
docker/django/: .env.example  Dockerfile
docker/nginx/: Dockerfile  app-nginx.conf
idanpow/: settings.py  urls.py  wsgi.py
nppow/: apps.py  serializers.py  views.py
nppow/services/: __init__.py  npmatrix.py
static/: index.html  script.js  styles.css
