[tool.poetry]
name = "idanpow"
version = "0.1.0"
description = ""
authors = ["Te4nick <ivan.ivantz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
djangorestframework = "^3.15.0"
drf-spectacular = "^0.27.1"
numpy = "^1.26.4"
apscheduler = "^3.10.4"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
